# terminal2048

./: Cargo.toml  LICENSE  README.md  default.nix
src/: main.rs
