[package]
name = "term2048"
version = "0.0.1"
authors = ["mhasbini <mohammad.hasbini@gmail.com>"]
readme = "README.md"
license = "MIT"
include = ["/README.md", "/Cargo.toml", "/src/*.rs", "/src/bin/*.rs"]
description = "2048 game on terminal"

[[bin]]
name = "term2048"

[dependencies]
termion = "1.5.1"
rand = "0.3.18"
serde_derive = "1.0.21"
bincode = "0.9.2"
serde = "1.0.21"
